Revert "added Mode=TwoWay"
This reverts commit b50b736e56f18858994e60766729717625ed6a00.

--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -75,7 +75,7 @@
             <AppBarElementContainer>
                 <ComboBox x:Name="DownloadThreadNumSelector"
                           Header="Download Threads"
-                          ItemsSource="{x:Bind _downloadThreadNums, Mode=TwoWay}"
+                          ItemsSource="{x:Bind _downloadThreadNums}"
                           SelectedItem="{x:Bind _downloadThreadNum, Mode=TwoWay}"/>
             </AppBarElementContainer>
             <AppBarSeparator MinWidth="30"/>
