--- a/Hitomi-Scroll-Viewer/SearchPage.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPage.xaml
@@ -35,8 +35,8 @@
                 <StackPanel Grid.Column="1" Orientation="Vertical" Spacing="20">
                     <Grid ColumnSpacing="10" RowSpacing="10">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="3*"/>
-                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition/>
@@ -46,7 +46,8 @@
                         <TextBox x:Name="GalleryIDTextBox"
                                  Grid.Row="0" Grid.RowSpan="3" Grid.Column="0"
                                  TextWrapping="Wrap"
-                                 PlaceholderText="Enter a Gallery ID or an URL Here. e.g. 2058075 or https://hitomi.la/..."
+                                 AcceptsReturn="True"
+                                 PlaceholderText="Enter Gallery id(s) or an URL(s) Here. e.g. 2058075 or https://hitomi.la/..."
                                  />
                         <Button Grid.Row="0" Grid.Column="1"
                                 HorizontalAlignment="Center"
