--- a/Hitomi-Scroll-Viewer/SearchPageComponent/DownloadingItem.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPageComponent/DownloadingItem.xaml
@@ -5,5 +5,35 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    
+    BorderThickness="1"
+    Background="LightBlue"
+    CornerRadius="10"
+    Padding="10"
+    ColumnSpacing="8"
+    RowSpacing="4"
+    >
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="Auto"/>
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+        <RowDefinition/>
+        <RowDefinition/>
+        <RowDefinition/>
+    </Grid.RowDefinitions>
+    <TextBlock x:Name="Description" Grid.Row="0" Grid.Column="0"
+               TextWrapping="WrapWholeWords"/>
+    <ProgressBar x:Name="DownloadProgressBar" Grid.Row="1" Grid.Column="0"
+                 Background="Gray"/>
+    <TextBlock x:Name="DownloadStatus" Grid.Row="2" Grid.Column="0"
+               TextWrapping="WrapWholeWords"/>
+    <Button x:Name="DownloadControlBtn" Grid.Row="0" Grid.Column="1" Grid.RowSpan="3"
+            Click="PauseOrResume"/>
+    <Button x:Name="CancelBtn" Grid.Row="0" Grid.Column="2" Grid.RowSpan="3"
+            ToolTipService.ToolTip="Cancel Download">
+        <SymbolIcon Symbol="Delete"></SymbolIcon>
+    </Button>
 </Grid>
