refactored using DependencyProperty

--- a/Hitomi-Scroll-Viewer/SearchPageComponent/TagContainer.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPageComponent/TagContainer.xaml
@@ -10,6 +10,11 @@
     BorderBrush="Black"
     Margin="5"
     >
+    <Grid.RowDefinitions>
+        <RowDefinition/>
+        <RowDefinition/>
+        <RowDefinition/>
+    </Grid.RowDefinitions>
 
     <Border x:Name="HeaderBorder"
             Grid.Row="0" Grid.Column="0"
