--- a/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
+++ b/Hitomi-Scroll-Viewer/ImageWatchingPage.xaml
@@ -20,6 +20,7 @@
                     ClosedDisplayMode="Minimal"
                     OverflowButtonVisibility="Collapsed"
                     HorizontalAlignment="Center"
+                    IsOpen="True"
                     Background="{ThemeResource AppBarBackgroundThemeBrush}">
             <AppBarButton MinWidth="50"
                           Icon="Back"
