refactored downloaditem usage by using ListView

--- a/Hitomi-Scroll-Viewer/SearchPage.xaml
+++ b/Hitomi-Scroll-Viewer/SearchPage.xaml
@@ -58,9 +58,20 @@
                             <TextBlock Text="Download Gallery" TextWrapping="WrapWholeWords"/>
                         </Button>
                     </Grid>
+                    <!--
                     <ScrollViewer MaxHeight="300">
                         <StackPanel x:Name="DownloadPanel" Orientation="Vertical" Spacing="10"/>
                     </ScrollViewer>
+                    -->
+                    <ListView x:Name="DownloadItemsContainer" ItemsSource="{x:Bind downloadingItems}"
+                              MaxHeight="300"
+                              SelectionMode="None" IsItemClickEnabled="False">
+                        <ListView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <ItemsStackPanel/>
+                            </ItemsPanelTemplate>
+                        </ListView.ItemsPanel>
+                    </ListView>
                 </StackPanel>
                 <Grid x:Name="TagControlGrid" Grid.Column="2"
                       ColumnSpacing="20">
